--- a/css/scss/320andup.scss
+++ b/css/scss/320andup.scss
@@ -9,10 +9,13 @@ Apache License: v2.0. http://www.apache.org/licenses/LICENSE-2.0
 @import "imports/reset";
 @import "vars";
 @import "mixins";
-// 480px
 
 @import "responsive/base";
 
+// 480px
+@media only screen and (min-width: 480px) {
+@import "responsive/480";
+}
 
 // 600px
 @media only screen and (min-width: 600px) {
